css/creative.css
/* ... */
@-moz-keyframes pulse {    
    0% {
        -moz-transform: scale(1);
        transform: scale(1);
    }

    50% {
        -moz-transform: scale(1.2);
        transform: scale(1.2);
    }

    100% {
        -moz-transform: scale(1);
        transform: scale(1);
    }
}

.small-heading {
    font-size: 190% !important;
    border-bottom: 1px solid grey;
    padding-bottom: 30px;
    text-align: center;
}




#whole_screen{
    padding: 0px; !important
}

/* footer starts */

#footer{
    text-align: center;
    font-family: 'Century Gothic';
    background-color: rgba(0,0,0,0.7);
    color: white;
    background-attachment: fixed;
    background-blend-mode: darken;
    padding: 30px;
    padding-bottom: 0px;
}

#team{
    background-color: floralwhite;
}


#footer img{
    height: 80px;
}

#footer *{
    color: #fff;
}

/* footer ends */

/*instagram attachment add here*/
#instafeed a {
  padding:5px 5px 1px 5px !important;
  border:1px solid #e1e1e1 !important;
  border-radius: 4px !important;
  position: relative !important;
  top: 5px !important;
}
#instafeed .likes {
  background:rgba(233,105,44,0.7) !important;
  font-family:sans-serif !important;
  font-size:1.2em !important;
  position:absolute !important;
  color:#ffffff !important;
  right:5px !important;
  top:5px !important;
  left:5px !important;
  opacity:0 !important;
  text-align:center !important;
    padding-top: 45% !important;
    height: 100% !important;
  text-shadow:0 1px rgba(0,0,0,0.5) !important;
  -webkit-transition: opacity 100ms ease !important;
	-moz-transition: opacity 100ms ease !important;
	-o-transition: opacity 100ms ease !important;
	-ms-transition: opacity 100ms ease !important;
	transition: opacity 100ms ease !important;
}

#update .row > div{
    text-align: center;
    padding-bottom: 40px;
    
}

#instafeed a:hover .likes {
  opacity:1 !important;
}
/*instagram attachment ends here*/



#update h1{
    color: white;
}

@font-face {
    font-family: pf;
    src: url(../fonts/Polygon-Regular.otf);
}

@font-face{
    font-family: pb;
    src: url(../fonts/zg.ttf);
}

#about{
    background-image: url("../img/about-us-bg.jpg");
    background-position: center;
    height: 100%;
    background-size: cover;
    background-color:transparent;
    font-family: "Century Gothic";
    }


/* Preloader */

#preloader {
    position:fixed;
    top:0;
    left:0;
    right:0;
    bottom:0;
    background-color:#fff; /* change if the mask should have another color then white */
    z-index:99; /* makes sure it stays on top */
}

#status {
    width:200px;
    height:200px;
    position:absolute;
    left:50%; /* centers the loading animation horizontally one the screen */
    top:50%; /* centers the loading animation vertically one the screen */
    background-image:url(../img/status.gif); /* path to your loading animation */
    background-repeat:no-repeat;
    background-position:center;
    margin:-100px 0 0 -100px; /* is width and height divided by two */
}

/* Preloader Ends */

/* registration tab */

#reg-tab{
    position: fixed;
    z-index: 100;
    bottom: 5%;
    left: -2px;
    width:20px;
}


#icon-id img{
    width: 32px;
    height: 32px;
}

#icon-id{
    margin: 0px;
    padding: 0px;
    margin-top: -4%;
    font-size: 200%;
}

#page-toggle-btn-1{
    position: fixed;
    top: 40px;
    left 50px;
    z-index: 100;
    color: transparent;
}

#mainNav li a span{
    font-size:150%;
    vertical-align:
        -5px;
    padding-right:15px;
    font-weight: bold;
    color: beige;
}

#mainNav li a{
    color: beige;
}


/* Styling of Carousel for day events */

#day{
    padding-top: 50px;
    margin-top: 0px;
    height: 100vh;
    position: relative;
    background-image: url(../img/dots.png);
    background-repeat: repeat;
}

.day-container {
  margin: 0 auto;
  padding-top: 50px;
  width: 250px;
  height: 200px;
  perspective:3000px;
}

.day-carousel {
  height: 100%;
  width: 100%;
  transform-style: preserve-3d;
  transition: transform 1.0s ease-in-out;
}


/* Cursor for HTML */
body *, html *{
    cursor: url(../img/icon_logo.png), pointer;
}

/* Cursor styling ends here */
.day-item {
  display: block;
  position: absolute;
  background: #000;
  width: 250px;
  height: 200px;
  line-height: 200px;
  text-align: center;
  color: #FFF;
  opacity: 0.95;
  border-radius: 10px;
    transition: transform 1.0s;
}


.day-a {
  transform: rotateY(0deg) translateZ(485px);
  background: #ed1c24;
}
.day-b {
  transform: rotateY(30deg) translateZ(485px);
  background: #0072bc;
}
.day-c {
  transform: rotateY(60deg) translateZ(485px);
  background: #39b54a;
}
.day-d {
  transform: rotateY(90deg) translateZ(485px);
  background: #f26522;
}
.day-e {
  transform: rotateY(120deg) translateZ(485px);
  background: #630460;
} 
.day-f {
  transform: rotateY(150deg) translateZ(485px);
  background: #8c6239;
}
.day-g {
  transform: rotateY(180deg) translateZ(485px);
  background: #8c6239;
}
.day-h {
  transform: rotateY(210deg) translateZ(485px);
  background: #8c6239;
}
.day-i {
  transform: rotateY(240deg) translateZ(485px);
  background: #8c6239;
}
.day-j {
  transform: rotateY(270deg) translateZ(485px);
  background: #8c6239;
}
.day-k {
  transform: rotateY(300deg) translateZ(485px);
  background: #8c6239;
}
.day-l {
  transform: rotateY(330deg) translateZ(485px);
  background: #8c6239;
}


.day-next, .day-prev {
  color: #444;
position: absolute;
  top: 330px;
  padding: 1em 2em;
  cursor: pointer;
transition: box-shadow 0.1s, top 0.1s;
}
.day-next:hover, .day-prev:hover { color: #000; }
.day-next:active, .day-prev:active {
  top: 334px;
  box-shadow: 0 1px 0 #999;
}
.day-next { right: 5em; }
.day-prev { left: 5em; }

@media screen and (max-width:881px){
    .day-next, .day-prev,.day-next:hover,.day-next:active,.day-prev:hover,.day-prev:active{
        position: absolute;
        bottom: 20px;
        top: auto;
    }
}

.day-carousel div figure{
    opacity: 1;
    position: relative;
}
/* ... */

